[gd_scene load_steps=3 format=3 uid="uid://cmjplav76x5mc"]

[ext_resource type="Script" path="res://Common/WindowManager/WindowManager.gd" id="1_j4fvq"]
[ext_resource type="Theme" uid="uid://dyftgwpfvfqdb" path="res://Assets/Themes/debug_theme.tres" id="2_obduc"]

[node name="WindowManager" type="Node3D"]
script = ExtResource("1_j4fvq")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 480.0
offset_bottom = 270.0

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]

[node name="Control" type="Control" parent="Control/CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 480.0
offset_bottom = 270.0
theme = ExtResource("2_obduc")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -135.0
offset_bottom = 135.0
grow_horizontal = 0
grow_vertical = 2

[node name="Fullscreen" type="HBoxContainer" parent="Control/CanvasLayer/Control/VBoxContainer"]
layout_mode = 2

[node name="FullscreenLabel" type="Label" parent="Control/CanvasLayer/Control/VBoxContainer/Fullscreen"]
layout_mode = 2
text = "fullscreen
"
vertical_alignment = 1

[node name="FullscreenButton" type="CheckButton" parent="Control/CanvasLayer/Control/VBoxContainer/Fullscreen"]
layout_mode = 2

[node name="WindowScale" type="HBoxContainer" parent="Control/CanvasLayer/Control/VBoxContainer"]
layout_mode = 2

[node name="WindowScaleLabel" type="Label" parent="Control/CanvasLayer/Control/VBoxContainer/WindowScale"]
layout_mode = 2
text = "window scale"

[node name="WindowScaleInput" type="SpinBox" parent="Control/CanvasLayer/Control/VBoxContainer/WindowScale"]
layout_mode = 2
min_value = 1.0
max_value = 6.0
value = 1.0
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -135.0
offset_right = 246.0
offset_bottom = 135.0
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CanvasLayer/Control/VBoxContainer2"]
layout_mode = 2

[node name="ScreenSizeLabel" type="Label" parent="Control/CanvasLayer/Control/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "screen_size:"

[node name="ScreenSizeValue" type="Label" parent="Control/CanvasLayer/Control/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/CanvasLayer/Control/VBoxContainer2"]
layout_mode = 2

[node name="WindowSizeLabel" type="Label" parent="Control/CanvasLayer/Control/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "window_size:"

[node name="WindowSizeValue" type="Label" parent="Control/CanvasLayer/Control/VBoxContainer2/HBoxContainer2"]
layout_mode = 2

[connection signal="toggled" from="Control/CanvasLayer/Control/VBoxContainer/Fullscreen/FullscreenButton" to="." method="_on_fullscreen_button_toggled"]
[connection signal="value_changed" from="Control/CanvasLayer/Control/VBoxContainer/WindowScale/WindowScaleInput" to="." method="_on_window_scale_input_value_changed"]
